@@ -6,14 +6,13 @@ RUN pip3 install tox==2.3.1
 RUN mkdir /opt/sparkle
 WORKDIR /opt/sparkle/
 
-# give more ram to java
-RUN echo "spark.driver.extraJavaOptions -XX:MaxPermSize=1024m -XX:PermSize=256m" >> $SPARK_HOME/conf/spark-defaults.conf
-
-# cqlsh
-RUN yum install -y python-virtualenv && virtualenv -p python2 venv2 && venv2/bin/pip install cassandra-driver==2.7.2, cqlsh==4.1.1
-
 # mysql
 RUN yum install -y mysql
+
+# cqlsh
+RUN yum install -y python-virtualenv && virtualenv -p python2 venv2 && venv2/bin/pip install pip==8.1.2
+RUN venv2/bin/pip install --use-wheel --index-url=https://pypi.tubularlabs.net cassandra-driver==2.7.2
+RUN venv2/bin/pip install cqlsh==4.1.1
 
 # Sparkle installation
 COPY . /opt/sparkle/
